added trains data

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <h1 class="display-4">Welcome to DCBus</h1>
     <p class="lead">This is a simple Bootstrap-powered welcome page fr dc buses.</p>
     <a href="/buses" class="btn btn-primary btn-lg">Buses</a>
-    <a href="/train" class="btn btn-primary btn-lg">Buses</a>
+    <a href="/trains" class="btn btn-primary btn-lg">Trains</a>
 </div>
     
 {% endblock %}
