--- a/templates/buses.html
+++ b/templates/buses.html
@@ -1,3 +1,38 @@
-Buses list goes here
+<!-- buses.html -->
+{% extends 'base.html' %}
+{% block title %} Buses {% endblock %}
 
-{{ data }}
+{% block content %}
+<div class="container mt-5">
+    <h1 class="text-center">Buses</h1>
+    <table class="table table-striped table-bordered table-hover mt-4">
+        <thead>
+            <tr>
+                <th>Bus ID</th>
+                <th>Vehicle ID</th>
+                <th>Route ID</th>
+                <th>Departure Time</th>
+                <th>Arrival Time</th>
+                <th>Direction</th>
+                <th>Destination</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for route_id, buses in data.items() %}
+            {% for bus in buses %}
+            <tr>
+                <td>{{ bus.BusID }}</td>
+                <td>{{ bus.VehicleID }}</td>
+                <td>{{ bus.RouteID }}</td>
+                <td>{{ bus.TripStartTime }}</td>
+                <td>{{ bus.TripendTime }}</td>
+                <td>{{ bus.DirectionText }}</td>
+                <td>{{ bus.TripHeadsign }}</td>
+            </tr>
+           
+            {% endfor %}
+        {% endfor %}
+        </tbody>
+    </table>
+</div>
+{% endblock %}
