--- a/templates/trains.html
+++ b/templates/trains.html
@@ -1,1 +1,36 @@
-Trains list goes here
+
+{% extends 'base.html' %}
+{% block title %} Trains {% endblock %}
+
+{% block content %}
+<div class="container mt-5">
+    <h1 class="text-center">Trains</h1>
+    <table class="table table-hover table-bordered table-striped mt-4">
+        <thead class="thead-dark">
+            <tr>
+                <th>Line</th>
+                <th>Destination</th>
+                <th>Location</th>
+                <th>Cars</th>
+                <th>Minutes</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for line, destinations in data.items() %}
+                {% for destination, trains in destinations.items() %}
+                    {% for train in trains %}
+                        <tr>
+                            <td>{{ train.Line }}</td>
+                            <td>{{ train.DestinationName }}</td>
+                            <td>{{ train.LocationName }}</td>
+                            <td>{{ train.Car if train.Car else 'N/A' }}</td>
+                            <td>{{ train.Min }}</td>
+                        </tr>
+                    {% endfor %}
+                {% endfor %}
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
+{% endblock %}
+{{data}}
