added machine learning to the system

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,10 +21,14 @@
                         <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/buses">Buses Stops</a>
+                        <a class="nav-link" href="/buses">Buses</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/trains">Metro Stops</a>
+                        <a class="nav-link" href="/trains">Trains</a>
+                    </li>
+                    
+                    <li class="nav-item">
+                        <a class="nav-link" href="/buses_trips_predictions">Bus Trips Predictions</a>
                     </li>
                 </ul>
             </div>
