--- a/templates/base.html
+++ b/templates/base.html
@@ -18,13 +18,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/">Home |</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/buses">Buses</a>
+                        <a class="nav-link" href="/buses">Buses Live Schedule |</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/trains">Trains</a>
+                        <a class="nav-link" href="/trains">Trains Live Schedule |</a>
                     </li>
                     
                     <li class="nav-item">
