--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,8 @@
 <div class="container text-center mt-5">
     <h1 class="display-4">Welcome to DCTrainBus</h1>
     <p class="lead">This is a simple Bootstrap-powered welcome page for dc trains and buses.</p>
-    <a href="/buses" class="btn btn-primary btn-lg">Buses</a>
-    <a href="/trains" class="btn btn-primary btn-lg">Trains</a>
+    <a href="/buses" class="btn btn-primary btn-lg">Bus Live Schedule</a>
+    <a href="/trains" class="btn btn-primary btn-lg">Train Live Schedule</a>
     <a href="/buses_trips_predictions" class="btn btn-primary btn-lg">Bus Trips Predictions</a>
 <div class="mt-4">
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/WMATA_system_map.svg/2471px-WMATA_system_map.svg.png" class="img-fluid w-50 h-50" alt="WMATA System Map">
