improved the htmltables in buses.html and trains.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,10 +21,10 @@
                         <a class="nav-link active" aria-current="page" href="/">Home |</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/buses">Buses Live Schedule |</a>
+                        <a class="nav-link" href="/buses">Live Bus Schedule |</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/trains">Trains Live Schedule |</a>
+                        <a class="nav-link" href="/trains">Live Train Schedule |</a>
                     </li>
                     
                     <li class="nav-item">
