--- a/templates/buses.html
+++ b/templates/buses.html
@@ -4,35 +4,49 @@
 
 {% block content %}
 <div class="container mt-5">
-    <h1 class="text-center">Buses</h1>
-    <table class="table table-striped table-bordered table-hover mt-4">
-        <thead>
-            <tr>
-                <th>Bus ID</th>
-                <th>Vehicle ID</th>
-                <th>Route ID</th>
-                <th>Departure Time</th>
-                <th>Arrival Time</th>
-                <th>Direction</th>
-                <th>Destination</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for route_id, buses in data.items() %}
-            {% for bus in buses %}
-            <tr>
-                <td>{{ bus.BusID }}</td>
-                <td>{{ bus.VehicleID }}</td>
-                <td><a href="/buses?RouteID={{ bus.RouteID }}">{{ bus.RouteID }}</a></td>
-                <td>{{ bus.TripStartTime }}</td>
-                <td>{{ bus.TripEndTime }}</td>
-                <td>{{ bus.DirectionText }}</td>
-                <td><a href="/buses?TripHeadsign={{ bus.TripHeadsign }}">{{ bus.TripHeadsign }}</a></td>
-            </tr>
-           
-            {% endfor %}
-        {% endfor %}
-        </tbody>
-    </table>
+    <h1 class="text-center mb-4">Buses</h1>
+    <div class="card shadow-sm">
+        <div class="card-header bg-primary text-white text-center">
+            <h4 class="mb-0">Bus Schedule</h4>
+        </div>
+        <div class="card-body">
+            <table class="table table-striped table-bordered table-hover">
+                <thead class="thead-dark">
+                    <tr>
+                        <th scope="col">Bus ID</th>
+                        <th scope="col">Vehicle ID</th>
+                        <th scope="col">Route ID</th>
+                        <th scope="col">Departure Time</th>
+                        <th scope="col">Arrival Time</th>
+                        <th scope="col">Direction</th>
+                        <th scope="col">Destination</th>
+                    </tr>
+                </thead>
+                <tbody>
+                {% for route_id, buses in data.items() %}
+                    {% for bus in buses %}
+                    <tr>
+                        <td>{{ bus.BusID }}</td>
+                        <td>{{ bus.VehicleID }}</td>
+                        <td>
+                            <a href="/buses?RouteID={{ bus.RouteID }}" class="text-primary">
+                                {{ bus.RouteID }}
+                            </a>
+                        </td>
+                        <td>{{ bus.TripStartTime }}</td>
+                        <td>{{ bus.TripEndTime }}</td>
+                        <td>{{ bus.DirectionText }}</td>
+                        <td>
+                            <a href="/buses?TripHeadsign={{ bus.TripHeadsign }}" class="text-primary">
+                                {{ bus.TripHeadsign }}
+                            </a>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
 {% endblock %}
