--- a/templates/trains.html
+++ b/templates/trains.html
@@ -5,7 +5,7 @@
 <div class="container mt-5">
     <h1 class="text-center text-primary mb-4">Train Schedule</h1>
     <div class="card shadow-lg">
-        <div class="card-header bg-dark text-white">
+        <div class="card-header bg-secondary text-white">
             <h4 class="mb-0">Train Information</h4>
         </div>
         <div class="card-body">
